tests/baselines/reference/ES5SymbolProperty3(strict=true).errors.txt
ES5SymbolProperty3.ts(7,1): error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'C'.


==== ES5SymbolProperty3.ts (1 errors) ====
    var Symbol: any;
    
    class C {
        [Symbol.iterator]() { }
    }
    
    (new C)[Symbol.iterator]
    ~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS7053: Element implicitly has an 'any' type because expression of type 'any' can't be used to index type 'C'.